<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exchangestation_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stardust@todo.todo">stardust</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>
  <depend>image_transport_plugins</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>message_filters</depend>
  <depend>msg_interfaces</depend>
  <depend>serial</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
